Remove HtmlEditor and WebReader widgets and javafx.web module